<resources>
    <string name="app_name">Escobedo</string>
    <string name="escoima">src</string>
    <string name="noticias">Noticias</string>
    <string name="denu">Denuncias</string>
    <string name="reports">Reportes</string>
    <string name="panic">Panico</string>
    <string name="emergency">Emergencia</string>
    <string name="Info">Recomendaciones</string>
    <string name="map">Mapa</string>
    <string name="events">Eventos</string>
    <string name="red">Redes</string>
    <string name="contacts">Contacto</string>
    <string name="fondo">fondo</string>
    <string name="inicio">Iniciar Sesión</string>
    <string name="regis">Registrarse</string>
    <string name="user">Usuario</string>
    <string name="contra">Contraseña</string>
    <string name="noti">NOTICIAS</string>
    <string name="txtdeFotoNews">Nuevo Comandante en la 45 zona militar</string>
    <string name="txtdeFotoNews2">El secretario de Seguridad Publica, Ernesto Munro Palacio, acudió este fin de semana en
    representacion de Gobernador Guillermo Padres Elias a la posesión del mando y protesta de Ley del nuevo Comandante
    de la zona 45 militar con sede en esta frontera</string>
    <string name="hello1">Drawer Two</string>
    <string name="hello2">Drawer One</string>
    <string name="el">escobedoletrasdescripcion</string>
    <string name="denuncias">Denuncias</string>
    <string name="denunciaSospechoso">Denuncia de Sospechoso</string>
    <string name="denunciaCorrupcion">Denuncia de Corrupcion</string>
    <string name="denunciaRobo">Denuncia de Robo</string>
    <string name="denunciaAuto">Denuncia de Autos</string>
    <string name="denunciaViolencia">Denuncia de Violencia</string>
    <string name="denunciaDaño">Denuncia de Daño</string>
    <string name="mapa">Mapa</string>
    <string name="reportes">Reportes</string>
    <string name="reporte">Reporte</string>
    <string name="eventos">Eventos</string>
    <string name="contactos">Contacto</string>
    <string name="redes">Redes</string>
    <string name="camellones">CAMELLONES</string>
    <string name="alumbrado">ALUMBRADO</string>
    <string name="limpieza">LIMPIEZA AVENIDAS</string>
    <string name="mantenimiento">MANTENIMIENTO PLAZAS</string>
    <string name="semaforos">SEMAFOROS</string>
    <string name="baches">BACHES</string>
    <string name="seguridad">SEGURIDAD PUBLICA</string>
    <string name="señalamientos">SEÑALAMIENTOS VIALES</string>
    <string name="news">NOVEDADES</string>
    <string name="correo">Correo Electronico:</string>
    <string name="asunto">Asunto:</string>
    <string name="comentarios">Escribe tus comentarios:</string>
    <string name="action_settings">Settings</string>
    <string name="enviar">Enviar</string>
    <string name="cruz">Cruz Roja</string>
    <string name="bombe">Bomberos</string>
    <string name="emer">Emergencia</string>
    <string name="denus">Denuncia</string>
    <string name="denusos">Denuncia de Sospechoso</string>
    <string name="denucorru">Denuncia de corrupcion</string>
    <string name="denurobo">Denuncia de Robo</string>
    <string name="denuauto">Denuncia de Auto</string>
    <string name="denuvio">Denuncia de Violencia</string>
    <string name="denuda">Denuncia de Daño</string>
    <string name="repo">Reporte</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre Completo:</string>
    <string name="correoo">Correo Electronico:</string>
    <string name="contraseña">Contraseña</string>
    <string name="nove1">- Evento internacional de deportes se celebrara en Escobedo el 10/06/15</string>
    <string name="nove2">- Escobedo donara ropa de frio y cobijas para gente con bajos recursos, acompañanos!!!</string>
    <string name="nove3">- Escobedo reduce su delincuencia un 99% con su ultima administración!!, asi que celebraremos este gran acontecimiento el viernes 01/01/2016, acompañanos!!</string>
    <string name="nove4">- Disfruta este sabado 23 de diciembre de 2015 el gran evento organizado por Escobedo, conocido como Putas para todos harry,si llegas con un churro de mota se te regalara otro con la misma porcion de marihuana,LEGALICEN LA MARIHUANA!!! </string>
    <string name="comentario">Comentario</string>
    <string name="title_activity_maps">Map</string>
    <string name="Health_Secretary">Secretaría de Salud</string>
    <string name="title_activity_recomendations">Recomendations</string>
    <string name="Recommendations">Recomendaciones</string>
    <string name="Medidas_preventivas_zika">Consulta las medidas preventivas para evitar ser contagiado por el virus del Zika, que es causado por picadura del mosquito Aedes Aegypty.</string>
    <string name="Recomendaciones_zika">Recomendaciones y síntomas: Zika</string>
    <string name="Recomendaciones_dengue">Recomendaciones y síntomas: Dengue</string>
    <string name="Elimina_cacharros">Elimina los cacharros del patio y techo, además de los depósitos que puedan acumular agua, ya que en ellos se reproduce el mosquito transmisor del dengue.</string>
    <string name="Recomendaciones_chikungunya">Recomendaciones y síntomas: Chikungunya</string>
    <string name="medidas_chikungunya">Consulta las medidas para prevenir este virus transmitido por el mosquito aedes aegypti y aedes albopictus, así como los síntomas de contagio.</string>
</resources>
