<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="escobedo.jnix.escobedo.redes"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/redes"
            android:background="#d63838"
            android:textColor="#ffffff"
            android:gravity="center_horizontal"
            android:textSize="25dp"
            android:textStyle="bold|normal" />





    </RelativeLayout>

    <TextView
        android:text="@string/hello2"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFD63838"/>

    <TextView
        android:text="@string/hello1"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="#FFD63838"/>

</android.support.v4.widget.DrawerLayout>
