<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:clickable="true">
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="escobedo.jnix.escobedo.news"-->


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/noti"
            android:id="@+id/textView"
            android:background="#d63838"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="25dp"
            android:textColor="#ffffff"
            android:textIsSelectable="false"
            android:textStyle="bold|normal" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="220dp"
            android:id="@+id/imageView8"
            android:layout_marginTop="48dp"
            android:background="@drawable/newss"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginRight="1dp"
            android:text="@string/txtdeFotoNews"
            android:id="@+id/textView2"
            android:background="#818181"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:layout_marginTop="14dp"
            android:layout_below="@+id/imageView8"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold|normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtdeFotoNews2"
            android:layout_marginTop="37dp"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"/>



    </RelativeLayout>

    <TextView
        android:text="@string/hello2"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFD63838"/>

    <TextView
        android:text="@string/hello1"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="#FFD63838"/>


</android.support.v4.widget.DrawerLayout>
