<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="escobedo.jnix.escobedo.reportes"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reportes"
            android:background="#d63838"
            android:textColor="#ffffff"
            android:gravity="center_horizontal"
            android:textSize="25dp"
            android:textStyle="bold|normal"
            android:id="@+id/textView8" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/camellones"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp"
            android:id="@+id/imab1"
            android:layout_below="@+id/textView8"
            android:layout_alignLeft="@+id/textView11"
            android:layout_alignStart="@+id/textView11" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/alumbrado"
            android:layout_marginTop="38dp"
            android:id="@+id/imab2"
            android:layout_below="@+id/imab1"
            android:layout_alignLeft="@+id/imab1"
            android:layout_alignStart="@+id/imab1" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/avenidas"
            android:layout_marginTop="44dp"
            android:id="@+id/imabe3"
            android:layout_below="@+id/imab2"
            android:layout_alignLeft="@+id/imab2"
            android:layout_alignStart="@+id/imab2" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/limpiezaplazas"
            android:layout_marginTop="46dp"
            android:layout_below="@+id/imabe3"
            android:layout_alignLeft="@+id/imabe3"
            android:layout_alignStart="@+id/imabe3"
            android:id="@+id/imab4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camellones"
            android:textColor="#000000"
            android:layout_below="@+id/imab1"
            android:layout_alignLeft="@+id/imab2"
            android:layout_alignStart="@+id/imab2"
            android:id="@+id/textView9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alumbrado"
            android:textColor="#000000"
            android:layout_below="@+id/imab2"
            android:layout_alignRight="@+id/textView9"
            android:layout_alignEnd="@+id/textView9"
            android:id="@+id/textView10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limpieza"
            android:textColor="#000000"
            android:layout_below="@+id/imabe3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="27dp"
            android:layout_marginStart="27dp"
            android:id="@+id/textView11" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mantenimiento"
            android:textColor="#000000"
            android:layout_below="@+id/imab4"
            android:layout_alignLeft="@+id/textView11"
            android:layout_alignStart="@+id/textView11"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_alignRight="@+id/textView11"
            android:layout_alignEnd="@+id/textView11"
            android:id="@+id/textView12" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/semaforos"
            android:layout_marginRight="41dp"
            android:layout_marginEnd="41dp"
            android:layout_above="@+id/textView9"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/imab5" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/baches"
            android:layout_alignTop="@+id/imab2"
            android:layout_alignLeft="@+id/imab5"
            android:layout_alignStart="@+id/imab5"
            android:id="@+id/imabe6" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/seguridad_publica"
            android:layout_alignTop="@+id/imabe3"
            android:layout_alignLeft="@+id/imabe6"
            android:layout_alignStart="@+id/imabe6"
            android:id="@+id/imab7" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/viales"
            android:layout_above="@+id/textView12"
            android:layout_alignLeft="@+id/imab7"
            android:layout_alignStart="@+id/imab7"
            android:id="@+id/imab8" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/semaforos"
        android:textColor="#000000"
        android:layout_alignTop="@+id/textView9"
        android:layout_alignLeft="@+id/imab5"
        android:layout_alignStart="@+id/imab5"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
            android:id="@+id/textView13" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baches"
            android:textColor="#000000"
            android:layout_below="@+id/imabe6"
            android:layout_alignRight="@+id/textView13"
            android:layout_alignEnd="@+id/textView13"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp"
            android:id="@+id/textView14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seguridad"
            android:textColor="#000000"
            android:layout_below="@+id/imab7"
            android:layout_alignLeft="@+id/textView13"
            android:layout_alignStart="@+id/textView13"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:id="@+id/textView15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/señalamientos"
            android:textColor="#000000"
            android:layout_marginLeft="58dp"
            android:layout_marginStart="58dp"
            android:layout_below="@+id/imab8"
            android:layout_toRightOf="@+id/textView12"
            android:layout_toEndOf="@+id/textView12" />










    </RelativeLayout>

    <TextView
        android:text="@string/hello2"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFD63838"/>

    <TextView
        android:text="@string/hello1"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="#FFD63838"/>

</android.support.v4.widget.DrawerLayout>
