<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="escobedo.jnix.escobedo.Recomendations">



     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:src="@drawable/zika"
            android:layout_below="@+id/textView16"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="65dp"
            android:layout_gravity="right|left"
            android:id="@+id/imageView7" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Recommendations"
            android:background="#d63838"
            android:textColor="#ffffff"
            android:gravity="center_horizontal"
            android:textSize="25dp"
            android:textStyle="bold|normal"
            android:id="@+id/textView16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Medidas_preventivas_zika"
            android:id="@+id/textView24"
            android:layout_alignTop="@+id/imageView7"
            android:layout_toRightOf="@+id/imageView7"
            android:layout_marginRight="10dp"
            android:autoLink="web"
            android:clickable="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Recomendaciones_zika"
            android:id="@+id/textView33"
            android:textSize="18sp"
            android:layout_above="@+id/textView24"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:id="@+id/imageView18"
            android:layout_marginTop="10dp"
            android:src="@drawable/dengue_1"
            android:layout_below="@+id/textView34"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Recomendaciones_dengue"
            android:id="@+id/textView34"
            android:layout_below="@+id/imageView7"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Elimina_cacharros"
            android:id="@+id/textView35"
            android:layout_alignTop="@+id/imageView18"
            android:layout_toRightOf="@+id/imageView18"
            android:layout_toEndOf="@+id/imageView18"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Recomendaciones_chikungunya"
            android:id="@+id/textView36"
            android:layout_below="@+id/imageView18"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:id="@+id/imageView19"
            android:layout_below="@+id/textView36"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/chikungunya"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medidas_chikungunya"
            android:id="@+id/textView37"
            android:layout_alignTop="@+id/imageView19"
            android:layout_toRightOf="@+id/imageView19"
            android:layout_toEndOf="@+id/imageView19"
            android:layout_marginRight="10dp" />

        </RelativeLayout>









</android.support.v4.widget.DrawerLayout>


