<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="escobedo.jnix.escobedo.emerg"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emergency"
            android:background="#d63838"
            android:textColor="#ffffff"
            android:gravity="center_horizontal"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            android:id="@+id/textView17" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton19"
            android:background="@drawable/cruz"
            android:layout_marginTop="26dp"
            android:layout_below="@+id/textView17"
            android:layout_alignLeft="@+id/imageButton21"
            android:layout_alignStart="@+id/imageButton21" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton20"
            android:background="@drawable/bomberosnl"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/imageButton19"
            android:layout_alignLeft="@+id/imageButton19"
            android:layout_alignStart="@+id/imageButton19" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton21"
            android:background="@drawable/secretariadesalud"
            android:layout_marginLeft="34dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/imageButton20"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cruz"
            android:textColor="#000000"
            android:textSize="25sp"
            android:id="@+id/textView21"
            android:layout_marginLeft="57dp"
            android:layout_marginStart="57dp"
            android:layout_alignTop="@+id/imageButton19"
            android:layout_toRightOf="@+id/imageButton19"
            android:layout_toEndOf="@+id/imageButton19"
            android:layout_marginTop="34dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bombe"
            android:textColor="#000000"
            android:textSize="25sp"
            android:id="@+id/textView22"
            android:layout_alignBottom="@+id/imageButton20"
            android:layout_alignLeft="@+id/textView21"
            android:layout_alignStart="@+id/textView21"
            android:layout_marginBottom="34dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Health_Secretary"
            android:textColor="#000000"
            android:textSize="25sp"
            android:id="@+id/textView23"
            android:linksClickable="false"
            android:layout_alignTop="@+id/imageButton21"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="false"
            android:layout_alignLeft="@+id/textView22"
            android:layout_alignStart="@+id/textView22" />


    </RelativeLayout>

    <TextView
        android:text="@string/hello2"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFD63838"/>

    <TextView
        android:text="@string/hello1"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="#FFD63838"/>

</android.support.v4.widget.DrawerLayout>
